rhai/codegen/ui_tests/rhai_fn_index_getter_multiple.stderr
error: conflicting index_get
  --> $DIR/rhai_fn_index_getter_multiple.rs:12:40
   |
12 |     #[rhai_fn(name = "foo", index_get, index_get)]
   |                                        ^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_index_getter_multiple.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
